--- a/styles.css
+++ b/styles.css
@@ -1,77 +1,73 @@
 *{
-    margin: 0;
+    margin:0;
     box-sizing: border-box;
 }
 
-body {
+body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: #111;
 }
-
-.row__poster {
+.row_poster{
     width: 100%;
     object-fit: contain;
     max-height: 100px;
     margin-right: 10px;
-    transition:transform 450ms;
+    transition: trasform 450ms;
 }
-
-.row__poster {
-    display: flex;
-    overflow-y: hidden;
-    overflow-x: scroll;
-    padding: 20px;
+.row_posters{
+display:flex;
+overflow-y: hidden;
+overflow-x: scroll;
+padding: 20px;
 
 }
-.row__poster:hover {
+.row_poster:hover{
     transform: scale(1.08);
 }
 
-.row__posters::-webkit-scrollbar {
+.row_posters::-webkit-scrollbar{
     display: none;
 }
-.row__posterLarge {
-    max-height: 250px;
+
+.row_posterLarge {
+  max-height: 250px; 
 }
-row__posterLarge:hover{
+.row_posterLarge:hover{
     transform: scale(1.09);
 }
 
-.row {
-   color: white;
-   margin-left: 20px; 
+.row{
+    color: white;
+    margin-left: 20px;
 }
-.banner {
-    background-image: url(image/banner.jpg);
+.banner{
+    background-image: url('images/banner.jpg');
     background-size: cover;
     background-position: center center;
     color: white;
-    object-fit: contain;
+    object-fit: cover;
     height: 448px;
 }
-
-.banner__contents{
+.banner_contents{
     margin-left: 30px;
     padding-top: 140px;
     height: 190px;
 }
-
-.banner__title {
+.banner_title{
     font-size: 3rem;
     font-weight: 800;
     padding-bottom: 0.3rem;
-}
 
-.banner__discription{
-    width: 45rem;
+}
+.banner_description{
+    width: 30rem;
     line-height: 1.3;
     padding-top: 1rem;
     font-size: 0.8rem;
-    max-width: 36px;
+    max-width: 360px;
     height: 180px;
 }
-
-.banner__button{
+.banner_button{
     cursor: pointer;
     color: #fff;
     outline: none;
@@ -83,43 +79,39 @@ row__posterLarge:hover{
     margin-right: 1rem;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
-    background-color: rgba(51, 51, 51, 0.5);
+    background-color: rgba(51,51,51,0.5);
 }
-
-.banner__button:hover{
+.banner_button:hover{
     color: #000;
     background-color: #e6e6e6;
     transition: all 0.2s;
 }
 
-.banner--fadeBottom{
+.banner_fadeBottom{
     margin-top: 145px;
     height: 7.4rem;
-    background-image: linear-gradient(180deg, transparent, rgba(37,37,37,0.61),#111);
+    background-image: linear-gradient(180deg,transparent,rgba(37,37,37,0.61),#111);
 }
-
-.nav__logo {
+.nav_logo{
     width: 80px;
     object-fit: contain;
 }
-
-nav__avatar {
+.nav_avatar{
     width: 30px;
     object-fit: contain;
 }
-
-.nav {
+.nav{
     position: fixed;
     top: 0;
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 20px;
-    z-index: 1;
-    transition-timing-function: ease-in;
-    transition: all 05s;
+padding: 20px;
+z-index: 1;
+transition-timing-function:ease-in ;
+transition: all 0.5s;
 }
 
-.nav__black {
+.nav_black{
     background-color: #111;
 }
